BG-3569: Add java options for spark tests